# rag-qa-system

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: routes.py
app/embeddings/: embedder.py
app/generation/: gemini.py
app/ingestion/: chunker.py  loader.py
app/pipeline/: rag.py
app/retrieval/: bm25_index.py  hybrid_search.py  reranker.py
app/vectorstore/: faiss_store.py
ui/: streamlit_app.py
