[project]
name = "rag-qa-system"
version = "0.1.0"
description = "RAG-based Document Q&A System using HuggingFace + Google Gemini"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "loguru>=0.7.2",
    "numpy>=1.24.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.8.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.38.0",
    "torch>=2.0.0",
    "tqdm>=4.66.5",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.30.0",
]
